--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,12 @@ services:
         ports:
           - "52773:52773"
           - "51773:51773"
+         
         volumes:
           - "./:/datavol"
 
-    # m1:
-    #     image: "eclipse-mosquitto"
-    #     ports:
-    #         - "7000:1883"
-    #     links:
-    #         - m2
-    # m2: 
-    #     image: "eclipse-mosquitto"
-    #     ports:
-    #         - "8000:1883"
+    mqtt:
+      image: toke/mosquitto
+      ports: 
+        - "1883:1883"
+        - "9001:9001"
