--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
     iris:
-        build: .
+        build: 
+          context: .
+          dockerfile: Dockerfile
         ports:
-          - "52773:52773"
-          - "51773:51773"
-          - "1883:1883"
-          - "9001:9001"         
+          - 52773:52773
+          - 51773:51773        
         volumes:
-          - "./:/datavol"
+          - ./:/datavol
 
 
