--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,34 @@
 version: '3.7'
 services:
-    iris:
-        build: 
-          context: .
-          dockerfile: Dockerfile
-        ports:
-          - 52773:52773         
-        environment:
-        - TZ=JST-9
-        volumes:
-          - "./datavol:/datavol"
-
-    apache:
-      image: httpd:2.4
-      init: true
-      hostname: apache
+  iris:
+      build: 
+        context: .
+        dockerfile: Dockerfile
       ports:
-        - 80:80        
+        - 52773:52773         
       environment:
       - TZ=JST-9
       volumes:
-      - ./datavol/App:/usr/local/apache2/htdocs/ 
+        - "./datavol:/datavol"
+
+  apache:
+    image: httpd:2.4
+    init: true
+    hostname: apache
+    ports:
+      - 80:80        
+    environment:
+    - TZ=JST-9
+    volumes:
+    - ./datavol/App:/usr/local/apache2/htdocs/ 
+
+  python:
+    restart: always
+    build:
+      context: python
+    working_dir: '/root/'
+    tty: true
+    environment:
+    - TZ=JST-9
+    volumes:
+    - ./datavol/share:/root/share 
