--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - TZ=JST-9
       volumes:
         - "./datavol:/datavol"
+        - "./c-src:/home/irisowner/src"
 
   apache:
     image: httpd:2.4
