--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
         build: 
           context: .
           dockerfile: Dockerfile
+        restart: always
+        command: --ISCAgent false          
         ports:
+          - 1972:1972
           - 52773:52773         
         volumes:
           - "./:/datavol"
